--- a/css/led-7-seg.css
+++ b/css/led-7-seg.css
@@ -9,13 +9,6 @@ body{
     text-align: center;
 }
 
-.container {
-    display:flex;
-    flex-direction: column;
-    max-width: 350px;
-    width: 100%;
-    height: 350px;
-}
 
 .notification {
     font-family: 'Montserrat';
@@ -25,8 +18,7 @@ body{
     line-height: 20px;
     text-align: center;
     letter-spacing: -1px;
-    margin: 0px 0px 15px 12px;
-    
+    margin: 0px 0px 15px 0px;
 }
 
 .alert {
@@ -46,20 +38,20 @@ body{
     background: #CC3300 !important;
 }
 .accept-leds {
-    border-top: 18px solid #32BF00 !important;
-    border-left: 18px solid transparent;
-    border-right: 18px solid transparent;
+    border-top: 10px solid #32BF00 !important;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
 }
 
 .erro-leds {
-    border-top: 18px solid #CC3300 !important;
-    border-left: 18px solid transparent;
-    border-right: 18px solid transparent;
+    border-top: 10px solid #CC3300 !important;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
 }
 .on {
-    border-top: 18px solid #262A34 !important;
-    border-left: 18px solid transparent;
-    border-right: 18px solid transparent;
+    border-top: 10px solid #262A34 !important;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
 }
 
 .on-center{
@@ -67,100 +59,151 @@ body{
 }
 
 .panel {
-    display:flex;
+    display: flex;
     align-items: center;
-    justify-content: center;
-    gap: 41px;
-    max-width: 350px;
+    justify-content: space-between;
+    max-width: 316px;
     width: 100%;
     margin: 0 auto;
 }
-
 .main {
-    position: relative;
+    /* position: relative;
     width: 63px;
     height: 150px;
+    margin: 20px; */
+    position: relative;
+    width: 58.47px;
+    height: 129px;
+    /* border: 1px solid black; */
+    margin: 0 15px;
 }
 
 .main .center-led{
     position: absolute;
-    top: 75px;
-    left: 15px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 
 .main .center{
-    width: 45px;
+    /* width: 45px;
     height: 24px;
+    background: #DDDDDD;
+    position: relative; */
+    width: 37px;
+    height: 12.5px;
     background: #DDDDDD;
     position: relative;
 }
 
 .main .center .arrow-right {
-    content: "";
-    position: absolute;
+    /* position: absolute;
     left: 42px;
-    top: 3.1px;
+    top: 0px;
     border-top: 18px solid #DDDDDD;
     border-left: 11.9px solid transparent;
     border-right: 11.9px solid transparent;
+    transform: rotate(-90deg); */
+    position: absolute;
+    left: 35px;
+    top: 1.5px;
+    border-top: 10px solid #DDDDDD;
+    border-left: 6.25px solid transparent;
+    border-right: 6.25px solid transparent;
+    
     transform: rotate(-90deg);
 }
 .main .center .arrow-left {
-    content: "";
-    position: absolute;
-    right: 42px;
-    top: 3.2px;
-    border-top: 18px solid #DDDDDD;
-    border-left: 11.9px solid transparent;
+    /* position: absolute;
+    right: 45px;
+    top: 3px;
+    border-top: 8px solid #DDDDDD;
+    border-left: 10.9px solid transparent;
     border-right: 11.9px solid transparent;
+    transform: rotate(90deg); */
+    position: absolute;
+    right: 35px;
+    top: 1.5px;
+    border-top: 10px solid #DDDDDD;
+    border-left: 6.25px solid transparent;
+    border-right: 6.25px solid transparent;
     transform: rotate(90deg);
 }
 
 .position-with-border{
-    position: absolute;
+    /* position: absolute;
     border-top: 18px solid #DDDDDD;
     border-left: 18px solid transparent;
     border-right: 18px solid transparent;
+    height: 0px; */
+    position: absolute;
+    border-top: 10px solid #DDDDDD;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
     height: 0px;
 }
 
 .top {
+    /* top: 0px;
+    left: 0px;
+    width: 43px; */
     top: 0px;
     left: 0px;
-    width: 43px;
+    width: 40px;
 }
 .left-led-first {
-    right: 16px;
+    /* right: 16px;
     top: 35px;
     width: 50px;
+    transform: rotate(-90deg); */
+    right: 23px;
+    top: 29px;
+    width: 40px;
     transform: rotate(-90deg);
 }
 
 .left-led-second {
-    right: 16px;
+    /* right: 16px;
     top: 124px;
     width: 50px;
+    transform: rotate(-90deg); */
+    right: 23px;
+    top: 91px;
+    width: 40px;
     transform: rotate(-90deg);
 }
 
+
 .right-led-first {
-    top: 35px;
+    /* top: 35px;
     left: 31px;
     width: 50px;
+    transform: rotate(90deg); */
+    top: 28px;
+    left: 23px;
+    width: 40px;
     transform: rotate(90deg);
 }
 
 .right-led-second {
-    left: 31px;
+    /* left: 31px;
     top: 124px;
     width: 50px;
+    transform: rotate(90deg); */
+    left: 23px;
+    top: 91px;
+    width: 40px;
     transform: rotate(90deg);
 }
 
 .bottom {
-    top: 163px;
+    /* top: 163px;
     left: -4px;
     width: 50px;
-    transform: rotate(180deg)
+    transform: rotate(180deg) */
+    bottom: 0px;
+    left: 1px;
+    width: 36px;
+    transform: rotate(180deg);
 }
